src/test/deca/syntax/invalid/resultats/test16_decl-synt.res
./src/test/deca/syntax/invalid/test16_decl.deca:15:11: missing IDENT at ';'
